tests/ui/source_without_ext.stderr
error: `source` templates require `ext = "..."`
 --> tests/ui/source_without_ext.rs:4:28
  |
4 | #[template_minify(source = "<p>{{ value }}</p>")]
  |                            ^^^^^^^^^^^^^^^^^^^^
